FIX: if a form follows body text, use correct spacing for its initial body-ah heading.

--- a/perma_web/static/css/style-responsive.scss
+++ b/perma_web/static/css/style-responsive.scss
@@ -1371,11 +1371,14 @@ button {
   &:first-child {
     margin-top: 0;
   }
-  form &:first-child {
-    margin-top: $grid * 8;
+  .body-text ~ form &:first-child {
+    margin-top: $grid * 6;
   }
   @include respond-tablet {
     margin-top: $grid * 8;
+    .body-text ~ form &:first-child {
+      margin-top: $grid * 8;
+    }
   }
   & + p {
     margin-top: $double;
